--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -90,7 +90,7 @@
 
             <div class="col-md-12">
                 <div class="col-md-12" ng-show="effectiveReduction.reductions[0].secondPeriodPowerReduction > 0">
-                    <h3 ng-bind-html="'actions.result' | translate | params:[effectiveReduction.reductions[0].secondPeriodPowerReduction | numberToI18N ]"></h3>
+                    <h3 ng-bind-html="'actions.result' | translate | params:[effectiveAverageReduction]"></h3>
                     <p class="cr-outro" ng-bind-html="'actions.outro' | translate"></p>
                 </div>
             </div>
