--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -30,6 +30,14 @@
                         <i class="fa fa-building fa-2x"></i>
                         <span ng-bind-html="'generic.enterprise' | translate"></span>
                     </button>
+                    <br/>
+                    <button class="btn cr-theme-orange cr-mega-button cr-centered"
+                            ng-disabled="true"
+                            ng-click="alert('not implemented yet !')">
+                        <i class="fa fa-university fa-2x"></i>
+                        <span ng-bind-html="'generic.authority' | translate"></span>
+                    </button>
+
                 </div>
 
                 <p ng-bind-html="'welcome.outro' | translate"></p>
