--- a/app/eu/factorx/citizens/angular/views/household/account/household-account.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/household-account.html
@@ -31,14 +31,16 @@
                 <cr-question label="generic.firstName">
                     <cr-text ng-model="getAccount().firstName" name="firstname"
                              ng-validation="validation.firstName"></cr-text>
-                    <p class="cr-error" ng-show="validation.firstName.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.firstName' | translate"></p>
+                    <p class="cr-error" ng-show="validation.firstName.valid == false && noSubmitYet == false"
+                       ng-bind-html="'account.errorMessage.firstName' | translate"></p>
                 </cr-question>
 
                 <!-- Q5120 generic.lastName -->
                 <cr-question label="generic.lastName">
                     <cr-text ng-model="getAccount().lastName" name="lastname"
                              ng-validation="validation.lastName"></cr-text>
-                    <p class="cr-error" ng-show="validation.lastName.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.lastName' | translate"></p>
+                    <p class="cr-error" ng-show="validation.lastName.valid == false && noSubmitYet == false"
+                       ng-bind-html="'account.errorMessage.lastName' | translate"></p>
                 </cr-question>
 
                 <!-- Q5130 generic.emailAddress -->
@@ -46,7 +48,8 @@
                     <cr-text ng-model="getAccount().email" name="email"
                              ng-validation="validation.emailAddress"
                              ng-disabled="isAuthenticated() == true"></cr-text>
-                    <p class="cr-error" ng-show="validation.emailAddress.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.emailAddress' | translate"></p>
+                    <p class="cr-error" ng-show="validation.emailAddress.valid == false && noSubmitYet == false"
+                       ng-bind-html="'account.errorMessage.emailAddress' | translate"></p>
                     <button class="btn btn-small cr-theme-orange cr-mega-button"
                             ng-show="isAuthenticated() == true"
 
@@ -62,7 +65,8 @@
                     <cr-text ng-model="getAccount().password" type="password" name="password"
                              ng-validation="validation.password"
                              ng-disabled="isAuthenticated() == true"></cr-text>
-                    <p class="cr-error" ng-show="validation.password.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.password' | translate"></p>
+                    <p class="cr-error" ng-show="validation.password.valid == false && noSubmitYet == false"
+                       ng-bind-html="'account.errorMessage.password' | translate"></p>
                     <button class="btn btn-small cr-theme-orange cr-mega-button"
                             ng-show="isAuthenticated() == true"
 
@@ -78,7 +82,8 @@
                              ng-hide="isAuthenticated() == true">
                     <cr-text ng-model="o.repeatPassword" type="password" name="password"
                              ng-validation="validation.repeatPassword"></cr-text>
-                    <p class="cr-error" ng-show="validation.repeatPassword.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.repeatPassword' | translate | translate"></p>
+                    <p class="cr-error" ng-show="validation.repeatPassword.valid == false && noSubmitYet == false"
+                       ng-bind-html="'account.errorMessage.repeatPassword' | translate | translate"></p>
                 </cr-question>
 
 
@@ -90,7 +95,8 @@
                 <!-- Q5150 account.zip.label -->
                 <cr-question label="account.zip.label">
                     <cr-text ng-model="getAccount().zipCode" name="zip" ng-validation="zip"></cr-text>
-                    <p class="cr-error" ng-show="validation.zip.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.zip' | translate"></p>
+                    <p class="cr-error" ng-show="validation.zip.valid == false && noSubmitYet == false"
+                       ng-bind-html="'account.errorMessage.zip' | translate"></p>
                 </cr-question>
 
                 <!-- Q5210 account.powerprovider.label -->
@@ -105,6 +111,12 @@
                                ng-model="getAccount().powerComsumerCategory" vertical="true"></cr-slider>
                 </cr-question>
 
+                <!-- Kit -->
+                <!-- Q5230 account.kit.label -->
+                <cr-question label="account.kit.label" ng-hide="isAuthenticated() == true">
+                    <cr-boolean ng-model="getAccount().sensitizationKit"></cr-boolean>
+                </cr-question>
+
                 <!-- agreement -->
                 <cr-question label="account.info.terms&conditions.label">
                     <button class="btn btn-small cr-theme-magenta cr-mega-button"
@@ -116,7 +128,8 @@
                     </button>
                     <cr-boolean ng-model="validation.terms.valid"></cr-boolean>
                 </cr-question>
-                <p class="cr-error" ng-show="validation.terms.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.terms' | translate"></p>
+                <p class="cr-error" ng-show="validation.terms.valid == false && noSubmitYet == false"
+                   ng-bind-html="'account.errorMessage.terms' | translate"></p>
 
                 <!-- advertisemnt -->
                 <p ng-bind-html="'account.info.summaryemail.label' | translate"></p>
