--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -33,6 +33,8 @@
         <script src='@routes.Assets.at("components/messenger/build/js/messenger.min.js")'></script>
         @* Trip *@
         <script src='@routes.Assets.at("components/trip.js/src/trip.js")'></script>
+        @* Regression *@
+        <script src='@routes.Assets.at("components/regression-js/build/regression.min.js")'></script>
         @* web app *@
         <script src='@routes.Assets.at("javascripts/app.js")'></script>
         @* ------------------------------------------------------------------ *@
