--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -6,13 +6,13 @@
             <div class="col-md-12">
 
                 <h1 ng-bind-html="'welcome.title' | translate"></h1>
+
                 <h2 ng-bind-html="'welcome.title2' | translate"></h2>
 
             </div>
         </div>
 
         <div class="row">
-
 
 
             <div class="col-md-4 col-md-offset-1">
@@ -55,7 +55,8 @@
                             <cr-text ng-model="loginParams.email" name="email"></cr-text>
                         </cr-question>
                         <cr-question label="generic.password">
-                            <cr-text ng-model="loginParams.password" name="password" type="password" ng-return="login()"></cr-text>
+                            <cr-text ng-model="loginParams.password" name="password" type="password"
+                                     ng-return="login()"></cr-text>
                         </cr-question>
                         <center>
                             <button class="btn btn-small cr-mega-button" ng-click="login()">
@@ -91,11 +92,11 @@
     <!--<br/> <br/> <br/> <br/> <br/> <br/> <br/>-->
     <!--<hr/>-->
     <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-md-12 text-left">-->
-                <!--<a ui-sref="root.controlsDemo">Controls demo ></a>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="row">-->
+    <!--<div class="col-md-12 text-left">-->
+    <!--<a ui-sref="root.controlsDemo">Controls demo ></a>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</div>-->
 
 
