--- a/public/vm/basicEmailStructure.vm
+++ b/public/vm/basicEmailStructure.vm
@@ -82,7 +82,7 @@
 
 <div style="background-color: rgb(51, 51, 51);min-height: 45px;">
     <a style="margin-left: 30px;display: block;font-size: 26px;line-height: 45px;margin-top: 7px;font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;color: white;letter-spacing: -1px;text-decoration: none;"
-       href="http://www.citizensreserve.be">Citizens' Reserve</a>
+       href="${citizensReserveHome}">Citizens' Reserve</a>
 </div>
 
 <div style="min-height: 100px;padding:10px;">
