--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -34,7 +34,7 @@
         @* Trip *@
         <script src='@routes.Assets.at("components/trip.js/src/trip.js")'></script>
         @* Regression *@
-        <script src='@routes.Assets.at("components/regression-js/build/regression.min.js")'></script>
+        <script src='@routes.Assets.at("javascripts/regression.js")'></script>
         @* web app *@
         <script src='@routes.Assets.at("javascripts/app.js")'></script>
         @* ------------------------------------------------------------------ *@
