--- a/app/eu/factorx/citizens/angular/views/household/results/household-results.html
+++ b/app/eu/factorx/citizens/angular/views/household/results/household-results.html
@@ -16,9 +16,11 @@
 
         <div class="row cr-profile-header">
 
-            <div class="col-md-12" >
+            <div class="col-md-12">
                 <p class="cr-intro" ng-bind-html="'results.intro' | translate | params:[nbSurveys]"></p>
-                <p class="cr-intro" ng-bind-html="'result.result' | translate | params:[effectiveAverageReduction, totalEffectiveAverageReduction]"></p>
+
+                <p class="cr-intro"
+                   ng-bind-html="'result.result' | translate | params:[effectiveAverageReduction, totalEffectiveAverageReduction]"></p>
             </div>
         </div>
 
@@ -41,6 +43,35 @@
         <div class="row">
             <div class="col-md-12">
                 <p class="cr-outro" ng-bind-html="'result.outro' | translate"></p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+
+                <p class="cr-outro" ng-bind-html="'results.followus' | translate"></p>
+
+                <div style="text-align:center;">
+                    <a class="twitter-follow-button" href="https://twitter.com/CitizReserve" data-show-count="false"
+                       data-lang="fr" data-size="large">Suivre @CitizReserve</a>
+
+                    <script>// <![CDATA[
+                    !function (d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                        if (!d.getElementById(id)) {
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src = p + '://platform.twitter.com/widgets.js';
+                            fjs.parentNode.insertBefore(js, fjs);
+                        }
+                    }(document, 'script', 'twitter-wjs');
+                    // ]]></script>
+                    <iframe style="border: none; overflow: hidden; height: 290px;"
+                            src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FCitizensReserve&amp;width&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=false&amp;show_border=true"
+                            width="300" height="150" frameborder="0" scrolling="no"></iframe>
+                </div>
+
+
             </div>
         </div>
 
