--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="app" xmlns="">
     <head>
-        <title>Citizen's reserve</title>
+        <title>Citizens' reserve</title>
         <meta charset="utf-8"/>
         @* ------------------------------------------------------------------ *@
         @* JAVASCRIPTS *@
