--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -16,6 +16,13 @@ img, button {
     max-width: 100%;
 }
 
+.comingsoon {
+    display: block;
+    text-align: right;
+    font-style: italic;
+    font-size: 0.75em;
+}
+
 .cr-centered {
     display: block;
     margin-left: auto;
