--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -29,13 +29,15 @@
                             ng-click="alert('not implemented yet !')">
                         <i class="fa fa-building fa-2x"></i>
                         <span ng-bind-html="'generic.enterprise' | translate"></span>
+                        <span class="comingsoon" ng-bind-html="'generic.comingsoon' | translate"></span>
                     </button>
                     <br/>
-                    <button class="btn cr-theme-orange cr-mega-button cr-centered"
+                    <button class="btn cr-theme-red cr-mega-button cr-centered"
                             ng-disabled="true"
                             ng-click="alert('not implemented yet !')">
                         <i class="fa fa-university fa-2x"></i>
                         <span ng-bind-html="'generic.authority' | translate"></span>
+                        <span class="comingsoon" ng-bind-html="'generic.comingsoon' | translate"></span>
                     </button>
 
                 </div>
