--- a/app/eu/factorx/citizens/angular/views/household/terms.html
+++ b/app/eu/factorx/citizens/angular/views/household/terms.html
@@ -2,7 +2,8 @@
 <div class="modal-header">
     <h3 class="modal-title cr-modal-title-text"  ng-bind-html="'account.terms.modal.title' | translate"></h3>
 </div>
-<div class="modal-body">
+<div class="modal-body" ng-bind-html="'account.terms' | translate">
 </div>
 <div class="modal-footer">
+    <button class="btn btn-primary" ng-click="close()" ng-bind-html="'generic.close' | translate"></button>
 </div>
