--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -30,8 +30,8 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-green"
                     label="topic.presence.label"
-                    ng-disabled="isActionTopicEmpty('presence')"
-                    ng-callback="save()"
+                    ng-disabled="isTopicEmpty('presence')"
+                    ng-callback="onTopicClose()"
                     ></cr-topic>
             </div>
 
@@ -43,8 +43,8 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-blue"
                     label="topic.programs.label"
-                    ng-disabled="isActionTopicEmpty('programs')"
-                    ng-callback="save()"
+                    ng-disabled="isTopicEmpty('programs')"
+                    ng-callback="onTopicClose()"
                     ></cr-topic>
             </div>
 
@@ -55,8 +55,8 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-red"
                     label="topic.heating.label"
-                    ng-disabled="isActionTopicEmpty('heating')"
-                    ng-callback="save()"
+                    ng-disabled="isTopicEmpty('heating')"
+                    ng-callback="onTopicClose()"
                     ></cr-topic>
             </div>
 
@@ -67,8 +67,8 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-orange"
                     label="topic.lighting.label"
-                    ng-disabled="isActionTopicEmpty('lighting')"
-                    ng-callback="save()"
+                    ng-disabled="isTopicEmpty('lighting')"
+                    ng-callback="onTopicClose()"
                     ></cr-topic>
             </div>
 
@@ -79,8 +79,8 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-magenta"
                     label="topic.dinner.label"
-                    ng-disabled="isActionTopicEmpty('dinner')"
-                    ng-callback="save()"
+                    ng-disabled="isTopicEmpty('dinner')"
+                    ng-callback="onTopicClose()"
                     ></cr-topic>
             </div>
 
@@ -89,8 +89,8 @@
         <div class="row">
 
             <div class="col-md-12">
-                <div class="col-md-12" ng-show="effectiveAverageReduction>0">
-                    <h3 ng-bind-html="'actions.result' | translate | params:[formattedEffectiveAverageReduction]"></h3>
+                <div class="col-md-12" ng-show="isEffectivePowerReductionNotNull()">
+                    <h3 ng-bind-html="'actions.result' | translate | params:[getAverageEffectivePowerReduction()]"></h3>
                     <p class="cr-outro" ng-bind-html="'actions.outro' | translate"></p>
                 </div>
             </div>
