--- a/app/eu/factorx/citizens/angular/views/household/results/household-results.html
+++ b/app/eu/factorx/citizens/angular/views/household/results/household-results.html
@@ -17,7 +17,7 @@
         <div class="row cr-profile-header">
 
             <div class="col-md-12">
-                <p class="cr-intro" ng-bind-html="'results.intro' | translate | params:[nbSurveys]"></p>
+                <p class="cr-intro" ng-bind-html="'results.intro' | translate | params:[nbParticipants]"></p>
 
                 <p class="cr-intro"
                    ng-bind-html="'result.result' | translate | params:[effectiveAverageReduction, totalEffectiveAverageReduction]"></p>
