--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -93,7 +93,7 @@
                     <h3 class="cr-outro" ng-bind-html="'profile.outro_1' | translate"></h3>
                 </div>
                 <div class="col-md-12" ng-show="isProfileCompleted()">
-                    <h3 ng-bind-html="'profile.result' | translate | params:[getAveragePotentialPowerReduction()]"></h3>
+                    <h3 ng-bind-html="'profile.result' | translate | params:[averagePotentialPowerReduction]"></h3>
                     <p class="cr-outro" ng-bind-html="'profile.outro_2' | translate"></p>
                 </div>
             </div>
