Implemented legacy accounts importer

--- a/app/eu/factorx/citizens/angular/views/household/account/account-change-password.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/account-change-password.html
@@ -2,8 +2,9 @@
     <h3 class="modal-title cr-modal-title-text" ng-bind-html="'account.button.changePassword' | translate"></h3>
 </div>
 <div class="modal-body">
-
-    <cr-question label="account.info.oldPassword">
+    <p class="cr-description" ng-shown="disableOldPassword">Votre mot de passe actuel ayant été généré automatiquement, nous vous invitons à définir un mot de passe personnel.
+    </p>
+    <cr-question label="account.info.oldPassword" ng-show="!disableOldPassword">
         <cr-text ng-model="o.oldPassword" type="password" name="password"
                  ng-validation="validation.oldPassword"></cr-text>
         <p class="cr-error" ng-show="validation.oldPassword.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.password' | translate"></p>
@@ -11,12 +12,12 @@
     <cr-question label="account.info.newPassword">
         <cr-text ng-model="o.newPassword" type="password" name="password"
                  ng-validation="validation.newPassword"></cr-text>
-        <p class="cr-error" ng-show="validation.newPassword.valid == false && noSubmitYet == false"  ng-bind-html="''account.errorMessage.password' | translate"></p>
+        <p class="cr-error" ng-show="validation.newPassword.valid == false && noSubmitYet == false"  ng-bind-html="'account.errorMessage.password' | translate"></p>
     </cr-question>
     <cr-question label="account.info.repeatPassword">
         <cr-text ng-model="o.repeatPassword"type="password" name="password"
                  ng-validation="validation.repeatPassword"></cr-text>
-        <p class="cr-error" ng-show="validation.repeatPassword.valid == false && noSubmitYet == false" ng-bind-html="''account.errorMessage.repeatPassword' | translate"></p>
+        <p class="cr-error" ng-show="validation.repeatPassword.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.repeatPassword' | translate"></p>
     </cr-question>
 </div>
 <div class="modal-footer">
