Legacy data adaptations

--- a/app/eu/factorx/citizens/angular/views/household/account/account-change-password.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/account-change-password.html
@@ -2,11 +2,11 @@
     <h3 class="modal-title cr-modal-title-text" ng-bind-html="'account.button.changePassword' | translate"></h3>
 </div>
 <div class="modal-body">
-    <p class="cr-description" ng-shown="disableOldPassword">Votre mot de passe actuel ayant été généré automatiquement, nous vous invitons à définir un mot de passe personnel.
+    <p class="cr-description" ng-shown="o.generatedPassword">Votre mot de passe actuel ayant été généré automatiquement, nous vous invitons à définir un mot de passe personnel.
     </p>
-    <cr-question label="account.info.oldPassword" ng-show="!disableOldPassword">
+    <cr-question label="account.info.oldPassword">
         <cr-text ng-model="o.oldPassword" type="password" name="password"
-                 ng-validation="validation.oldPassword"></cr-text>
+                 ng-validation="validation.oldPassword" ng-disabled="o.generatedPassword"></cr-text>
         <p class="cr-error" ng-show="validation.oldPassword.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.password' | translate"></p>
     </cr-question>
     <cr-question label="account.info.newPassword">
