wip actions enterprise

--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -19,25 +19,19 @@
                 <h3 ng-bind-html="'welcome.intro' | translate"></h3>
 
                 <div class="well">
-                    <button class="btn cr-theme-green cr-mega-button cr-centered" ng-click="toHouseHold()">
+                    <button class="btn cr-theme-green cr-mega-button cr-centered" ng-click="toHousehold()">
                         <i class="fa fa-home fa-2x"></i>
                         <span ng-bind-html="'generic.household' | translate"></span>
                     </button>
                     <br/>
-                    <button class="btn cr-theme-orange cr-mega-button cr-centered"
-                            ng-disabled="true"
-                            ng-click="alert('not implemented yet !')">
+                    <button class="btn cr-theme-orange cr-mega-button cr-centered" ng-click="toEnterprise()">
                         <i class="fa fa-building fa-2x"></i>
                         <span ng-bind-html="'generic.enterprise' | translate"></span>
-                        <span class="comingsoon" ng-bind-html="'generic.comingsoon' | translate"></span>
                     </button>
                     <br/>
-                    <button class="btn cr-theme-red cr-mega-button cr-centered"
-                            ng-disabled="true"
-                            ng-click="alert('not implemented yet !')">
+                    <button class="btn cr-theme-red cr-mega-button cr-centered"  ng-click="toAuthority()">
                         <i class="fa fa-university fa-2x"></i>
                         <span ng-bind-html="'generic.authority' | translate"></span>
-                        <span class="comingsoon" ng-bind-html="'generic.comingsoon' | translate"></span>
                     </button>
 
                 </div>
